--- a/src/LayuiAvaloniaPack/Layui.Main/Views/Dialogs/PrismMessageBox.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/Dialogs/PrismMessageBox.axaml
@@ -5,8 +5,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:lay="using:LayUI.Avalonia.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    MinWidth="300"
+    MinHeight="200"
     mc:Ignorable="d">
     <lay:LayTitleBar HeaderHeight="40" />
 </UserControl>
