--- a/src/LayuiAvaloniaPack/LayuiApp/Views/Dialog/DialogWindowBase.axaml
+++ b/src/LayuiAvaloniaPack/LayuiApp/Views/Dialog/DialogWindowBase.axaml
@@ -4,8 +4,15 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="DialogWindowBase"
+    Title="{Binding Title}"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    WindowStartupLocation="CenterScreen"
-    mc:Ignorable="d" />
+    Classes="LayWindow"
+    WindowStartupLocation="CenterOwner"
+    mc:Ignorable="d">
+    <Window.Styles>
+        <Style Selector="Window">
+            <Setter Property="SizeToContent" Value="WidthAndHeight" />
+        </Style>
+    </Window.Styles>
+</Window>
