扩展元素帮助类，以及文本控件新增聚焦属性
1：更新界面元素初始化加载命令
2：更新界面元素销毁命令
3：移除对话框注册VM约束，采用目标容器ICO抓取服务
4：新增文本控件聚焦属性

--- a/src/LayuiAvaloniaPack/Layui.Main/Views/Dialogs/PrismMessageBox.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/Dialogs/PrismMessageBox.axaml
@@ -8,5 +8,9 @@
     MinWidth="300"
     MinHeight="200"
     mc:Ignorable="d">
-    <lay:LayTitleBar HeaderHeight="40" />
+    <UserControl.Styles>
+        <Style Selector="Window">
+            <Setter Property="WindowStartupLocation" Value="CenterOwner" />
+        </Style>
+    </UserControl.Styles>
 </UserControl>
