--- a/src/LayuiAvaloniaPack/LayuiApp/Views/Dialog/DialogWindowBase.axaml
+++ b/src/LayuiAvaloniaPack/LayuiApp/Views/Dialog/DialogWindowBase.axaml
@@ -8,11 +8,4 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     Classes="LayWindow"
-    WindowStartupLocation="CenterOwner"
-    mc:Ignorable="d">
-    <Window.Styles>
-        <Style Selector="Window">
-            <Setter Property="SizeToContent" Value="WidthAndHeight" />
-        </Style>
-    </Window.Styles>
-</Window>
+    mc:Ignorable="d" />
