增强对话框模式帮助类型
补偿Window在CenterOwner模式下作为对话框不进行相对居中问题

--- a/src/LayuiAvaloniaPack/Layui.Main/Views/DialogPage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/DialogPage.axaml
@@ -28,6 +28,7 @@
                     Margin="5"
                     Command="{Binding PrismDlalogCommand}"
                     Content="Prismd对话框"
+                    HotKey="Ctrl+A"
                     Type="Default" />
             </StackPanel>
         </Grid>
