--- a/src/LayuiAvaloniaPack/LayuiApp/Views/Dialog/DialogWindowBase.axaml
+++ b/src/LayuiAvaloniaPack/LayuiApp/Views/Dialog/DialogWindowBase.axaml
@@ -3,9 +3,11 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:layExtends="using:LayUI.Avalonia.Extends"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="{Binding Title}"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    Classes="LayWindow"
+    layExtends:WindowHelper.IsDialog="true"
+    WindowStartupLocation="CenterOwner"
     mc:Ignorable="d" />
