--- a/src/LayuiAvaloniaPack/LayUI.Avalonia/Themes/Default.axaml
+++ b/src/LayuiAvaloniaPack/LayUI.Avalonia/Themes/Default.axaml
@@ -1,5 +1,8 @@
 ﻿<Styles xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ColorStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ContentControlStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/UserControlStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ControlsBaseStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/WindowStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/TitleBarStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/TransitionsStyle.axaml" />
