--- a/src/LayuiAvaloniaPack/Layui.Main/Views/FormPage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/FormPage.axaml
@@ -11,6 +11,12 @@
     mc:Ignorable="d">
     <ScrollViewer>
         <StackPanel Margin="5">
+            <Border
+                Width="150"
+                Height="50"
+                Margin="10"
+                Background="Red"
+                Classes="Zoom" />
             <TextBox
                 Height="40"
                 Margin="5"
