--- a/src/LayuiAvaloniaPack/Layui.Main/Views/LoadingPage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/LoadingPage.axaml
@@ -10,9 +10,16 @@
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Grid RowDefinitions="auto,*">
-        <CheckBox Name="check" Content="开关" />
+        <CheckBox
+            Name="check"
+            Content="开关"
+            IsChecked="true" />
         <UniformGrid Grid.Row="1" Columns="3">
             <lay:LayLoading Title="正在加载..." IsActive="{Binding #check.IsChecked}" />
+            <lay:LayLoading
+                Title="正在加载..."
+                IsActive="{Binding #check.IsChecked}"
+                Type="Skip" />
         </UniformGrid>
     </Grid>
 </UserControl>
