新增旋转和简约简约风格加载动画

--- a/src/LayuiAvaloniaPack/Layui.Main/Views/LoadingPage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/LoadingPage.axaml
@@ -20,6 +20,14 @@
                 Title="正在加载..."
                 IsActive="{Binding #check.IsChecked}"
                 Type="Skip" />
+            <lay:LayLoading
+                Title="正在加载..."
+                IsActive="{Binding #check.IsChecked}"
+                Type="Simple" />
+            <lay:LayLoading
+                Title="正在加载..."
+                IsActive="{Binding #check.IsChecked}"
+                Type="Revolve" />
         </UniformGrid>
     </Grid>
 </UserControl>
