--- a/src/LayuiAvaloniaPack/LayUI.Avalonia/Style/Default/LoadingStyle.axaml
+++ b/src/LayuiAvaloniaPack/LayUI.Avalonia/Style/Default/LoadingStyle.axaml
@@ -8,7 +8,7 @@
                 Width="200"
                 Height="200"
                 IsActive="True"
-                Type="Skip">
+                Type="Revolve">
                 <lay:LayButton />
             </lay:LayLoading>
         </Border>
@@ -17,7 +17,7 @@
         <Setter Property="Opacity" Value="0" />
     </Style>
     <Style Selector="lay|LayLoading">
-        <Setter Property="Color" Value="{DynamicResource Blue}" />
+        <Setter Property="Color" Value="{DynamicResource LightGreen}" />
         <Setter Property="ClipToBounds" Value="false" />
         <Setter Property="Template">
             <Setter.Value>
@@ -467,7 +467,7 @@
         </Style.Animations>
     </Style>
     <!--  Window忙碌效果 End  -->
-    <!--  Window忙碌效果 Start  -->
+    <!--  跳跃效果 Start  -->
     <Style Selector="lay|LayLoading[Type=Skip]">
         <Setter Property="Size" Value="50" />
     </Style>
@@ -549,5 +549,190 @@
             </Animation>
         </Style.Animations>
     </Style>
-    <!--  Window忙碌效果 End  -->
+    <!--  跳跃效果 End  -->
+    <!--  简约 Start  -->
+    <Style Selector="lay|LayLoading[Type=Simple]">
+        <Setter Property="Size" Value="50" />
+    </Style>
+    <Style Selector="lay|LayLoading[Type=Simple]/template/ TemplatedControl#PART_LoadingContent">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Viewbox Width="{TemplateBinding Tag}" Height="{TemplateBinding Tag}">
+                        <Grid Width="150" Height="150">
+                            <UniformGrid
+                                Width="100"
+                                Height="50"
+                                Columns="5">
+                                <Grid
+                                    Name="PART_Grid1"
+                                    Margin="1,0"
+                                    Background="{TemplateBinding Background}" />
+                                <Grid
+                                    Name="PART_Grid2"
+                                    Margin="1,0"
+                                    Background="{TemplateBinding Background}" />
+                                <Grid
+                                    Name="PART_Grid3"
+                                    Margin="1,0"
+                                    Background="{TemplateBinding Background}" />
+                                <Grid
+                                    Name="PART_Grid4"
+                                    Margin="1,0"
+                                    Background="{TemplateBinding Background}" />
+                                <Grid
+                                    Name="PART_Grid5"
+                                    Margin="1,0"
+                                    Background="{TemplateBinding Background}" />
+                            </UniformGrid>
+                        </Grid>
+                    </Viewbox>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style Selector="lay|LayLoading[Type=Simple]/template/ TemplatedControl#PART_LoadingContent /template/ Grid#PART_Grid1">
+        <Style.Animations>
+            <Animation
+                FillMode="None"
+                IterationCount="Infinite"
+                Duration="0:0:0.5">
+                <KeyFrame Cue="0%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                </KeyFrame>
+                <KeyFrame Cue="50%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="2" />
+                </KeyFrame>
+                <KeyFrame Cue="100%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                </KeyFrame>
+            </Animation>
+        </Style.Animations>
+    </Style>
+    <Style Selector="lay|LayLoading[Type=Simple]/template/ TemplatedControl#PART_LoadingContent /template/ Grid#PART_Grid2">
+        <Style.Animations>
+            <Animation
+                Delay="0:0:0.1"
+                FillMode="None"
+                IterationCount="Infinite"
+                Duration="0:0:0.5">
+                <KeyFrame Cue="0%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                </KeyFrame>
+                <KeyFrame Cue="50%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="2" />
+                </KeyFrame>
+                <KeyFrame Cue="100%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                </KeyFrame>
+            </Animation>
+        </Style.Animations>
+    </Style>
+    <Style Selector="lay|LayLoading[Type=Simple]/template/ TemplatedControl#PART_LoadingContent /template/ Grid#PART_Grid3">
+        <Style.Animations>
+            <Animation
+                Delay="0:0:0.2"
+                FillMode="None"
+                IterationCount="Infinite"
+                Duration="0:0:0.5">
+                <KeyFrame Cue="0%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                </KeyFrame>
+                <KeyFrame Cue="50%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="2" />
+                </KeyFrame>
+                <KeyFrame Cue="100%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                </KeyFrame>
+            </Animation>
+        </Style.Animations>
+    </Style>
+    <Style Selector="lay|LayLoading[Type=Simple]/template/ TemplatedControl#PART_LoadingContent /template/ Grid#PART_Grid4">
+        <Style.Animations>
+            <Animation
+                Delay="0:0:0.3"
+                FillMode="None"
+                IterationCount="Infinite"
+                Duration="0:0:0.5">
+                <KeyFrame Cue="0%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                </KeyFrame>
+                <KeyFrame Cue="50%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="2" />
+                </KeyFrame>
+                <KeyFrame Cue="100%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                </KeyFrame>
+            </Animation>
+        </Style.Animations>
+    </Style>
+    <Style Selector="lay|LayLoading[Type=Simple]/template/ TemplatedControl#PART_LoadingContent /template/ Grid#PART_Grid5">
+        <Style.Animations>
+            <Animation
+                Delay="0:0:0.4"
+                FillMode="None"
+                IterationCount="Infinite"
+                Duration="0:0:0.5">
+                <KeyFrame Cue="0%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                </KeyFrame>
+                <KeyFrame Cue="50%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="2" />
+                </KeyFrame>
+                <KeyFrame Cue="100%">
+                    <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                </KeyFrame>
+            </Animation>
+        </Style.Animations>
+    </Style>
+    <!--  简约 End  -->
+    <!--  旋转 Start  -->
+    <Style Selector="lay|LayLoading[Type=Revolve]">
+        <Setter Property="Size" Value="50" />
+    </Style>
+    <Style Selector="lay|LayLoading[Type=Revolve]/template/ TemplatedControl#PART_LoadingContent">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Viewbox Width="{TemplateBinding Tag}" Height="{TemplateBinding Tag}">
+                        <Grid>
+                            <Grid
+                                Name="PART_Grid"
+                                Width="40"
+                                Height="40"
+                                Margin="5">
+                                <Path
+                                    Margin="5"
+                                    Data="M20.201,5.169c-8.254,0-14.946,6.692-14.946,14.946c0,8.255,6.692,14.946,14.946,14.946 s14.946-6.691,14.946-14.946C35.146,11.861,28.455,5.169,20.201,5.169z M20.201,31.749c-6.425,0-11.634-5.208-11.634-11.634       c0-6.425,5.209-11.634,11.634-11.634c6.425,0,11.633,5.209,11.633,11.634C31.834,26.541,26.626,31.749,20.201,31.749z"
+                                    Fill="{TemplateBinding Background}"
+                                    Opacity="0.2"
+                                    Stretch="Fill" />
+                                <Path
+                                    x:Name="path"
+                                    Data="M26.013,10.047l1.654-2.866c-2.198-1.272-4.743-2.012-7.466-2.012h0v3.312h0 C22.32,8.481,24.301,9.057,26.013,10.047z"
+                                    Fill="{TemplateBinding Background}"
+                                    Stretch="None" />
+                            </Grid>
+                        </Grid>
+                    </Viewbox>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style Selector="lay|LayLoading[Type=Revolve]/template/ TemplatedControl#PART_LoadingContent /template/ Grid#PART_Grid">
+        <Style.Animations>
+            <Animation
+                FillMode="None"
+                IterationCount="Infinite"
+                Duration="0:0:1">
+                <KeyFrame Cue="0%">
+                    <Setter Property="RotateTransform.Angle" Value="0" />
+                </KeyFrame>
+                <KeyFrame Cue="100%">
+                    <Setter Property="RotateTransform.Angle" Value="360" />
+                </KeyFrame>
+            </Animation>
+        </Style.Animations>
+    </Style>
+    <!--  简约 End  -->
 </Styles>
