调整窗体居中位置

--- a/src/LayuiAvaloniaPack/LayuiApp/Views/MainWindow.axaml
+++ b/src/LayuiAvaloniaPack/LayuiApp/Views/MainWindow.axaml
@@ -1,4 +1,4 @@
-<Window
+<lay:LayWindow
     x:Class="LayuiApp.Views.MainWindow"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -42,4 +42,4 @@
             </lay:LayNotificationHost>
         </lay:LayMessageHost>
     </lay:LayTitleBar>
-</Window>
+</lay:LayWindow>
