--- a/src/LayuiAvaloniaPack/Layui.Main/Views/FormPage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/FormPage.axaml
@@ -25,6 +25,7 @@
             <lay:LayTextBox
                 MinHeight="40"
                 Margin="5"
+                IsFocus="True"
                 Text="{Binding Value, Mode=TwoWay}"
                 Watermark="只能输入数字" />
             <lay:LayTextBox
