--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/DialogWindowStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/DialogWindowStyle.axaml
@@ -8,6 +8,12 @@
         </Border>
     </Design.PreviewWith>
     <Style Selector="global|LayDialogWindow">
+        <Setter Property="Opacity" Value="0.0" />
+        <Setter Property="Transitions">
+            <Transitions>
+                <DoubleTransition Property="Opacity" Duration="0:0:0.1" />
+            </Transitions>
+        </Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
@@ -27,17 +33,8 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style Selector="global|LayDialogWindow[IsOpen=false] /template/ Grid#PART_Body">
-        <Style.Animations>
-            <Animation Duration="0:0:0.1">
-                <KeyFrame Cue="0%">
-                    <Setter Property="Opacity" Value="0.3" />
-                </KeyFrame>
-                <KeyFrame Cue="100%">
-                    <Setter Property="Opacity" Value="0.0" />
-                </KeyFrame>
-            </Animation>
-        </Style.Animations>
+    <Style Selector="global|LayDialogWindow[IsOpen=true]">
+        <Setter Property="Opacity" Value="1" />
     </Style>
     <Style Selector="global|LayDialogWindow[IsOpen=false] /template/ ContentPresenter#PART_ContentPresenter">
         <Style.Animations>
@@ -45,10 +42,8 @@
                 <KeyFrame Cue="0%">
                     <Setter Property="ScaleTransform.ScaleX" Value="1" />
                     <Setter Property="ScaleTransform.ScaleY" Value="1" />
-                    <Setter Property="Opacity" Value="1" />
                 </KeyFrame>
                 <KeyFrame Cue="100%">
-                    <Setter Property="Opacity" Value="0" />
                     <Setter Property="ScaleTransform.ScaleX" Value="0.7" />
                     <Setter Property="ScaleTransform.ScaleY" Value="0.7" />
                 </KeyFrame>
@@ -59,26 +54,12 @@
         <Style.Animations>
             <Animation Duration="0:0:0.1">
                 <KeyFrame Cue="0%">
-                    <Setter Property="Opacity" Value="0" />
                     <Setter Property="ScaleTransform.ScaleX" Value="0.7" />
                     <Setter Property="ScaleTransform.ScaleY" Value="0.7" />
                 </KeyFrame>
                 <KeyFrame Cue="100%">
                     <Setter Property="ScaleTransform.ScaleX" Value="1" />
                     <Setter Property="ScaleTransform.ScaleY" Value="1" />
-                    <Setter Property="Opacity" Value="1" />
-                </KeyFrame>
-            </Animation>
-        </Style.Animations>
-    </Style>
-    <Style Selector="global|LayDialogWindow[IsOpen=true] /template/ Grid#PART_Body">
-        <Style.Animations>
-            <Animation Duration="0:0:0.1">
-                <KeyFrame Cue="0%">
-                    <Setter Property="Opacity" Value="0.0" />
-                </KeyFrame>
-                <KeyFrame Cue="100%">
-                    <Setter Property="Opacity" Value="0.3" />
                 </KeyFrame>
             </Animation>
         </Style.Animations>
