--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/DialogWindowStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/DialogWindowStyle.axaml
@@ -8,16 +8,15 @@
         </Border>
     </Design.PreviewWith>
     <Style Selector="global|LayDialogWindow">
-        <Setter Property="Opacity" Value="0.0" />
-        <Setter Property="Transitions">
-            <Transitions>
-                <DoubleTransition Property="Opacity" Duration="0:0:0.1" />
-            </Transitions>
-        </Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate>
-                    <Grid>
+                    <Grid Name="PART_Root">
+                        <Grid.Transitions>
+                            <Transitions>
+                                <DoubleTransition Property="Opacity" Duration="0:0:0.1" />
+                            </Transitions>
+                        </Grid.Transitions>
                         <Grid
                             Name="PART_Body"
                             Background="Black"
@@ -33,8 +32,16 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style Selector="global|LayDialogWindow[IsOpen=true]">
+    <Style Selector="global|LayDialogWindow/template/ Grid#PART_Root">
+        <Setter Property="Opacity" Value="0" />
+    </Style>
+    <Style Selector="global|LayDialogWindow[IsOpen=true] /template/ Grid#PART_Root">
         <Setter Property="Opacity" Value="1" />
+    </Style>
+    <Style Selector="global|LayDialogWindow[IsOpen=false] /template/ ContentPresenter#PART_ContentPresenter">
+        <Setter Property="Opacity" Value="0" />
+        <Setter Property="ScaleTransform.ScaleX" Value="0.7" />
+        <Setter Property="ScaleTransform.ScaleY" Value="0.7" />
     </Style>
     <Style Selector="global|LayDialogWindow[IsOpen=false] /template/ ContentPresenter#PART_ContentPresenter">
         <Style.Animations>
@@ -42,10 +49,12 @@
                 <KeyFrame Cue="0%">
                     <Setter Property="ScaleTransform.ScaleX" Value="1" />
                     <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                    <Setter Property="Opacity" Value="1" />
                 </KeyFrame>
                 <KeyFrame Cue="100%">
                     <Setter Property="ScaleTransform.ScaleX" Value="0.7" />
                     <Setter Property="ScaleTransform.ScaleY" Value="0.7" />
+                    <Setter Property="Opacity" Value="0" />
                 </KeyFrame>
             </Animation>
         </Style.Animations>
@@ -54,12 +63,14 @@
         <Style.Animations>
             <Animation Duration="0:0:0.1">
                 <KeyFrame Cue="0%">
+                    <Setter Property="Opacity" Value="0" />
                     <Setter Property="ScaleTransform.ScaleX" Value="0.7" />
                     <Setter Property="ScaleTransform.ScaleY" Value="0.7" />
                 </KeyFrame>
                 <KeyFrame Cue="100%">
                     <Setter Property="ScaleTransform.ScaleX" Value="1" />
                     <Setter Property="ScaleTransform.ScaleY" Value="1" />
+                    <Setter Property="Opacity" Value="1" />
                 </KeyFrame>
             </Animation>
         </Style.Animations>
